--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
             <div class = "container">
                 <a href="/" class = "navbar-brand text-light">Stupid Twitter</a>
                 <ul class = "nav navbar-nav flex-row float-right">
-                    {% if session['user_id'] %}
+                    {% if session['username'] %}
                     <li class = "nav-item">
-                        <a class = "nav-link pr-3 text-light" href="/logout">Logout</a>
+                         <a class = "nav-link pr-3 text-light" href="/logout">Logout</a>
                     </li>
                     {% else %}
                     <li class = "nav-item">
